--- a/Aerodrone-stm32lib.cbp
+++ b/Aerodrone-stm32lib.cbp
@@ -35,7 +35,30 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 			<Add option="-DUSE_DEFAULT_TIMEOUT_CALLBACK" />
+			<Add directory="FreeRTOS/include" />
+			<Add directory="FreeRTOS/portable/GCC/ARM_CM4F" />
 		</Compiler>
+		<Unit filename="FreeRTOS/croutine.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="FreeRTOS/list.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="FreeRTOS/portable/GCC/ARM_CM4F/port.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="FreeRTOS/portable/MemMang/heap_4.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="FreeRTOS/queue.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="FreeRTOS/tasks.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="FreeRTOS/timers.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="STM32Lib.cpp" />
 		<Unit filename="STM32Lib.hpp" />
 		<Unit filename="Vector3D.hpp" />
